--- a/scss/_diamonds.scss
+++ b/scss/_diamonds.scss
@@ -15,13 +15,19 @@ $diamond-left: 10vw;
 }
 
 .diamonds {
-    position: absolute;
+    position: relative;
     top: $diamond-top;
     left: $diamond-left;
     transform: rotate(45deg);
     transform-origin: 0;
-    max-width: 100vw;
     z-index: -200;
+}
+
+.background {
+    position: absolute;
+    width: 100vw;
+    height: 100%;
+    overflow: hidden;
 }
 
 $list: 0, 1, 2, 3, 4, 5, 6, 7;
