--- a/scss/_fix.scss
+++ b/scss/_fix.scss
@@ -1,9 +1,5 @@
 // For quick and dirty fixes
 
-body {
-    overflow-x: hidden;
-}
-
 .sticky-top {
     position: sticky;
     top: 1rem;
